<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="63dp"
        android:layout_height="19dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="76dp"
        android:text="Number 1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="64dp"
        android:layout_height="26dp"
        android:layout_marginTop="48dp"
        android:text="Number 2"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="83dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="Calculate"
        android:text="Calc"
        app:layout_constraintEnd_toStartOf="@+id/btnCalcWithOperations"
        app:layout_constraintTop_toTopOf="@+id/btnCalcWithOperations" />

    <EditText
        android:id="@+id/txtNumber1"
        android:layout_width="129dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/txtNumber2"
        android:layout_width="133dp"
        android:layout_height="49dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/btnSendToNextScreen"
        android:layout_width="70dp"
        android:layout_height="37dp"
        android:onClick="ToNextScreen"
        android:text="Next Screen"
        app:layout_constraintEnd_toStartOf="@+id/btnCalculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCalculate" />

    <TextView
        android:id="@+id/tvSentResult"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcWithOperations" />

    <Button
        android:id="@+id/btnCalcWithOperations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="CalcWithOperations"
        android:text="Calc W Oper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spOperations" />

    <Spinner
        android:id="@+id/spOperations"
        android:layout_width="103dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:entries="@array/spinnerOperations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumber2" />

</androidx.constraintlayout.widget.ConstraintLayout>