...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <TextView
        android:id="@+id/tvSentValue"
        android:layout_width="81dp"
        android:layout_height="47dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textView5"
...
